# TrueHUD

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
scripts/source/: TrueHUD_MCM.psc
src/: CMakeLists.txt  HUDHandler.cpp  HUDHandler.h  Hooks.cpp  Hooks.h  ModAPI.cpp  ModAPI.h  NND_API.h  NPCNameProvider.cpp  NPCNameProvider.h  Offsets.h  PCH.h  Papyrus.cpp  Papyrus.h  Settings.cpp  Settings.h  TrueHUDAPI.h  Utils.cpp  Utils.h  main.cpp
src/Scaleform/: Scaleform.cpp  TrueHUDMenu.cpp  TrueHUDMenu.h
src/Widgets/: ActorInfoBar.cpp  ActorInfoBar.h  BossInfoBar.cpp  BossInfoBar.h  FloatingText.cpp  FloatingText.h  InfoBarBase.cpp  InfoBarBase.h  PlayerWidget.cpp  PlayerWidget.h  RecentLoot.cpp  RecentLoot.h  ShoutIndicator.cpp  ShoutIndicator.h
swf/: TrueHUD.fla  TrueHUD_Assets0.fla  TrueHUD_Assets1.fla  TrueHUD_Assets2.fla  TrueHUD_Widgets.fla
swf/HUD/: TrueHUD.as
swf/Widgets/: TrueHUD_Bar.as  TrueHUD_BossBar.as  TrueHUD_FloatingText.as  TrueHUD_InfoBar.as  TrueHUD_InfoBarBase.as  TrueHUD_PlayerWidget.as  TrueHUD_RecentLootEntry.as  TrueHUD_RecentLootList.as  TrueHUD_ShoutIndicator.as
translation/: TrueHUD_english.txt  copy.ps1
